# tme-studio

./: .gitignore  .license-types-allowed  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  LICENSE  README.md  SECURITY.md  mise.toml  noxfile.py  pyproject.toml  renovate.json  sonar-project.properties  tasks.toml
.github/: AGENTS.md  CODEOWNERS  labels.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-dev-env/: action.yml
.github/workflows/: _audit.yml  _codeql.yml  _lint.yml  _package-publish.yml  _test.yml  ci-cd.yml
src/aignostics_tme_studio/: AGENTS.md  __init__.py
src/aignostics_tme_studio/notebooks/demo/: demo.py  demo_old.py
src/aignostics_tme_studio/notebooks/examples/: clustering.py  ide_classification.py  outlier_detection.py  survival_analysis.py  tumor_immune_phenotyping.py
src/aignostics_tme_studio/notebooks/examples/public/: metadata.csv
src/aignostics_tme_studio/notebooks/tutorials/: 1_getting_started.py  2_description_opentme_features.py  3_including_TCGA_metadata.py  4_using_custom_data.py
src/aignostics_tme_studio/notebooks/tutorials/public/: concatenated_slide_readouts.csv
src/aignostics_tme_studio/plotting/: __init__.py  distributions.py  ide_classification.py  kaplan_meier.py  kaplan_meyer.py  tip_classification.py
src/aignostics_tme_studio/styling/: __init__.py  style.css  styling_utils.py
src/aignostics_tme_studio/utils/: __init__.py  column_selector.py  config.py  data_classes.py  ui_constants.py  utils.py
src/aignostics_tme_studio/utils/snippets/: hf_token.py  logo.py
tests/: AGENTS.md  __init__.py  conftest.py
tests/aignostics_tme_studio/: __init__.py
tests/aignostics_tme_studio/plotting/: distributions_test.py  ide_classification_test.py  kaplan_meyer_test.py  tip_classification_test.py
tests/aignostics_tme_studio/styling/: styling_utils_test.py
tests/aignostics_tme_studio/utils/: column_selector_test.py  utils_test.py
